# bc-convert

./: .gitignore  requirements.txt  setup.cfg
src/bc_convert/: __main__.py
src/bc_convert/config/: alipay_config.py
src/bc_convert/converter/: __init__.py  alipay.py  wechat.py
tests/: test_fluent.py  test_unzip.py  test_yaml.py
