[metadata]
name = bc-convert
version = 0.0.1
author = Cheng
description = A beancount importer
classifiers =
    Programming Language :: Python :: 3
    Licence :: OSI Approved :: MIT Licence
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src